@@ -185,11 +185,13 @@
             userPasswordAlgorithm = ssha;
             prependPasswordScheme = YES;
 
-            // Use vmail.mailbox as global address book.
+            // Use `vmail.mailbox` as global address book.
             // WARNING: This will search all user accounts, not just accounts
             // under same domain as login user.
-            //isAddressBook = YES;
-            //displayName = "Global Address Book";
+            isAddressBook = YES;
+            displayName = "Global Address Book";
+            SOGoEnableDomainBasedUID = YES;
+            DomainFieldName = "domain";
         }
     );
     SQL backend */
